--- a/change-color/index.html
+++ b/change-color/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <button type="button" class="colorBtn">press here to change color</button>
+<button type=”button” class=“clorBtn2”>press here to add a new message</button>
 <script type="text/javascript" src="script.js"></script>    
 </body>
 </html>
